--- a/View/Login/login.html
+++ b/View/Login/login.html
@@ -2,18 +2,19 @@
 <html>
 <head>
     <meta http-equiv="Access-Control-Allow-Origin" content="*" charset="utf-8">
-    <title>login</title>
+    <title>首页</title>
     <style type="text/css">
         *{
             margin: 0;
             padding: 0;
         }
         #wrap {
-            height: 719px;
-            width: 100;
-            background-image: url(4.jpg);
+            height: 500px;
+            width: 10;
+            background-image: url(../../Static/img/Login/login.jpg);
             background-repeat: no-repeat;
             background-position: center center;
+            background-size: 100% 100%;
             position: relative;
         }
         #head {
@@ -33,9 +34,9 @@
             height: 408px;
             width: 368px;
             position: absolute;
-            background-color: #FFFFFF;
-            top: 20%;
-            right: 15%;
+            background-color: #CC9933;
+            top: 3%;
+            right: 10%;
         }
         .logC a button {
             width: 100%;
@@ -47,12 +48,12 @@
         }
         .logGet .logD.logDtip .p1 {
             display: inline-block;
-            font-size: 28px;
+            font-size: 30px;
             margin-top: 30px;
             width: 86%;
         }
         #wrap .logGet .logD.logDtip {
-            width: 86%;
+            width: 50%;
             border-bottom: 1px solid #ee7700;
             margin-bottom: 60px;
             margin-top: 0px;
@@ -84,8 +85,6 @@
             margin-bottom: 0px;
             margin-left: auto;
         }
-
-
         .title {
             font-family: "宋体";
             color: #FFFFFF;
@@ -97,7 +96,6 @@
             height: 40px;
             width: 30%;
         }
-
         .copyright {
             font-family: "宋体";
             color: #FFFFFF;
@@ -109,131 +107,98 @@
             width: 40%;
             text-align:center;
         }
-
-
         #foot .copyright .img {
-            width: 100%;
-            height: 24px;
+            width:100%;
+            height: 30px;
             position: relative;
-        }
-        .copyright .img .icon {
-            display: inline-block;
-            width: 24px;
-            height: 24px;
-            margin-left: 22px;
-            vertical-align: middle;
-            background-image: url(%E7%94%B5%E5%AD%90%E9%82%AE%E4%BB%B6.png);
-            background-repeat: no-repeat;
-            vertical-align: middle;
-            margin-right: 5px;
-        }
-
-        .copyright .img .icon1 {
-            display: inline-block;
-            width: 24px;
-            height: 24px;
-            margin-left: 22px;
-            vertical-align: middle;
-            background-image: url(%E5%9C%B0%E5%9D%80.png);
-            background-repeat: no-repeat;
-            vertical-align: middle;
-            margin-right: 5px;
-        }
-        .copyright .img .icon2 {
-            display: inline-block;
-            width: 24px;
-            height: 24px;
-            margin-left: 22px;
-            vertical-align: middle;
-            background-image: url(%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F.png);
-            background-repeat: no-repeat;
-            vertical-align: middle;
-            margin-right: 5px;
         }
         #foot .copyright p {
             height: 24px;
             width: 100%;
         }
     </style>
+    <link rel="stylesheet" href="../../Static/js/layui/css/layui.css"  media="all">
+
 </head>
 
 <body>
-<div class="header" id="head">
-    <div class="title">企业人事管理系统</div>
 
-</div>
-
-<div class="wrap" id="wrap">
-    <div class="logGet">
-        <!-- 头部提示信息 -->
-        <div class="logD logDtip">
-            <p class="p1">登录</p>
-        </div>
-        <!-- 输入框 -->
-        <div class="lgD">
-            <img src="img/logName.png" width="20" height="20" alt=""/>
-            <input class="username" type="text"
-                   placeholder="输入用户名" />
-        </div>
-        <div class="lgD">
-            <img src="img/logPwd.png" width="20" height="20" alt=""/>
-            <input class="password" type="text"
-                   placeholder="输入用户密码" />
-        </div>
-        <div class="logC login">
-            <a href="javascript:;" target="_self"><button>登 录</button></a>
-        </div>
-    </div>
-</div>
-
-<div class="footer" id="foot">
-    <div class="copyright">
-        <p>Copyright © 2018 Qunar.com Inc. All Rights Reserved.</p>
-        <div class="img">
-            <i class="icon"></i><span>联系邮箱：jiankangsun@yahoo.com</span>
-        </div>
-
-        <div class="img">
-            <i class="icon1"></i><span>联系地址：合肥工业大学</span>
-        </div>
-
-        <div class="img">
-            <i class="icon2"></i><span>联系电话：18355042634</span>
-        </div>
-
+    <div class="header" id="head">
+        <div class="title">理发店管理系统</div>
     </div>
 
-</div>
+    <div class="wrap" id="wrap">
+        <div class="logGet">
+            <!-- 头部提示信息 -->
+            <div class="logD logDtip">
+                <p class="p1">登录</p>
+            </div>
+            <!-- 输入框 -->
+            <div class="lgD">
+                <img src="../../Static/img/Login/username.jpg" width="20" height="20" alt=""/>
+                <input class="username" type="text"
+                       placeholder="输入用户名" />
+            </div>
+            <div class="lgD">
+                <img src="../../Static/img/Login/password.jpg" width="20" height="20" alt=""/>
+                <input class="password" type="password"
+                       placeholder="输入用户密码" />
+            </div>
+            <div class="logC login">
+                <a href="javascript:;" target="_self"><button>登 录</button></a>
+            </div>
+        </div>
+    </div>
 
-<script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
+    <div class="footer" id="foot">
+        <div class="copyright">
+            <p></p>
+            <div class="img">
+                <span>联系人：刘明敏</span>&nbsp;
+                <span>邮箱：2604327526@qq.com</span>&nbsp;
+                <span>地址：河北师范大学</span>&nbsp;
+                <span>联系电话：15830485921</span>
+            </div>
+        </div>
+    </div>
 
-<script>
-  //JavaScript代码区域
-  layui.use(['jquery', 'element', 'layer'], function(){
-    var element = layui.element;
-    var layer = layui.layer;
-    var $ = layui.$;
-    $('.login').click(function () {
-      var username = $('.username').val();
-      var password = $('.password').val();
-      console.log(username,password);
-      $.ajax({
-        type: "POST",
-        url: "http://0.0.0.0:9501/login/login",
-        data: {username:username,password:password},
-        success: function(result) {
-          layer.msg(result.msg, {}, function () {
-            location.href = '';
-          });
-        },
-        error: function(result) {
-          console.log(result);
-          layer.msg(result.responseJSON.msg, {icon:5});
-        }
+    <script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
+
+    <script>
+      //JavaScript代码区域
+      layui.use(['jquery', 'element', 'layer'], function(){
+        var element = layui.element;
+        var layer = layui.layer;
+        var $ = layui.$;
+        $('.login').click(function () {
+          var username = $.trim($('.username').val());
+          var password = $.trim($('.password').val());
+
+          console.log(username,password);
+          //用户名,密码输入规范判断
+          if(username == '' || password=='')
+          {
+            layer.msg('用户名或密码不能为空');
+          }else{
+            $.ajax({
+              type: "POST",
+              url: "http://0.0.0.0:9501/login/login",
+              data: {username: username, password: password},
+              success: function (result) {
+                layer.msg(result.msg, {}, function () {
+                  location.href = '../home.html';
+                });
+              },
+              error: function (result) {
+                console.log(result);
+                layer.msg(result.responseJSON.msg, {icon: 5});
+              }
+            });
+          }
+        });
+
       });
-    });
-  });
-</script>
+    </script>
 
 </body>
 
