--- a/View/home.html
+++ b/View/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 后台大布局 - Layui</title>
-    <link rel="stylesheet" href="../layui-v2.5.6/layui/css/layui.css"  media="all">
+    <title>主页面</title>
+    <link rel="stylesheet" href="../Static/js/layui/css/layui.css"  media="all">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">layui 后台布局</div>
+        <div class="layui-logo">理发店管理平台</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
@@ -35,7 +35,7 @@
                     <dd><a href="">安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退了</a></li>
+            <li class="layui-nav-item"><a href="">退出</a></li>
         </ul>
     </div>
 
@@ -44,9 +44,9 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;">所有商品</a>
+                    <a class="" href="javascript:;">服务选择</a>
                     <dl class="layui-nav-child">
-                        <dd><a class="menu-item" data-src="http://www.jianshu.com" href="javascript:;">服务选择</a></dd>
+                        <dd><a class="menu-item" data-src="file:///Users/guoyuzhao/sites/lifadian/View/test2.html" href="javascript:;">服务类型</a></dd>
                         <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>
                         <dd><a  href="javascript:;">列表二</a></dd>
                         <dd><a href="javascript:;">列表三</a></dd>
@@ -54,15 +54,16 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">解决方案</a>
+                    <a href="javascript:;">员工管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
                         <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">云市场</a></li>
-                <li class="layui-nav-item"><a href="">发布商品</a></li>
+                <li class="layui-nav-item"><a href="">订单管理</a></li>
+                <li class="layui-nav-item"><a href="">会员管理</a></li>
+                <li class="layui-nav-item"><a href="">数据统计</a></li>
             </ul>
         </div>
     </div>
@@ -77,7 +78,9 @@
         © layui.com - 底部固定区域
     </div>
 </div>
-<script src="../layui-v2.5.6/layui/layui.js" charset="utf-8"></script>
+
+<script src="../Static/js/layui/layui.js" charset="utf-8"></script>
+
 <script>
   //JavaScript代码区域
   layui.use(['jquery', 'element'], function(){
