--- a/View/test2.html
+++ b/View/test2.html
@@ -1,1 +1,43 @@
-默认页面
+<html>
+    <head>
+        <title>服务选择</title>
+    </head>
+
+    <body>
+        <form class="" action="">
+            <div class="layui-form-item">
+                <label class="layui-form-label">选择服务类型</label>
+                <div class="layui-input-block">
+                    <select name="service" lay-verify="required">
+                        <option value="">请选择服务</option>
+                        <option value="0">洗发</option>
+                        <option value="1" selected>剪发</option>
+                        <option value="2">烫发</option>
+                        <option value="3">染发</option>
+                    </select>
+                    <select name="city" lay-verify="required">
+                        <option value="">请选择一种服务</option>
+                        <option value="0">洗发</option>
+                        <option value="1">剪发</option>
+                        <option value="2">烫发</option>
+                        <option value="3">染发</option>
+                    </select>
+                    <select name="city" lay-verify="required">
+                        <option value="">请选择一种服务</option>
+                        <option value="0">洗发</option>
+                        <option value="1">剪发</option>
+                        <option value="2">烫发</option>
+                        <option value="3">染发</option>
+                    </select>
+                    性别：
+                    <input type="radio" name="sex" value="nan" title="男">男
+                    <input type="radio" name="sex" value="nv" title="女" checked>女
+
+            </div>
+</select>
+
+        </form>
+    </body>
+
+
+</html>
