--- a/View/home.html
+++ b/View/home.html
@@ -56,7 +56,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">员工管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
+                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/admin/admin.html" href="javascript:;">员工列表</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
                         <dd><a href="">超链接</a></dd>
                     </dl>
