--- a/View/home.html
+++ b/View/home.html
@@ -70,7 +70,7 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe src="" frameborder="0" id="content" style="width: 100%; height: 300px;"></iframe>
+        <iframe src="" frameborder="0" id="content" style="width: 100%;height: 100%;"></iframe>
     </div>
 
     <div class="layui-footer">
