--- a/View/home.html
+++ b/View/home.html
@@ -48,9 +48,7 @@
                     <dl class="layui-nav-child">
                         <dd><a class="menu-item" data-src="file:///Users/guoyuzhao/sites/lifadian/View/test2.html" href="javascript:;">服务类型</a></dd>
                         <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>
-                        <dd><a  href="javascript:;">列表二</a></dd>
                         <dd><a href="javascript:;">列表三</a></dd>
-                        <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -58,11 +56,15 @@
                     <dl class="layui-nav-child">
                         <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/admin/admin.html" href="javascript:;">员工列表</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="">订单管理</a></li>
-                <li class="layui-nav-item"><a href="">会员管理</a></li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">会员管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/member/member.html" href="javascript:;">会员列表</a></dd>
+                    </dl>
+                </li>
                 <li class="layui-nav-item"><a href="">数据统计</a></li>
             </ul>
         </div>
