系统设置/添加服务，添加服务类型表单展示

--- a/View/home.html
+++ b/View/home.html
@@ -54,7 +54,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">员工管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/admin/admin.html" href="javascript:;">员工列表</a></dd>
+                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/admin/adminList.html" href="javascript:;">员工列表</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
                     </dl>
                 </li>
@@ -62,7 +62,13 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">会员管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/member/member.html" href="javascript:;">会员列表</a></dd>
+                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/member/memberList.html" href="javascript:;">会员列表</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">系统设置</a>
+                    <dl class="layui-nav-child">
+                        <dd><a a class="menu-item"  data-src="file:///Users/guoyuzhao/sites/lifadian/View/service/addService.html" href="javascript:;">添加服务</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="">数据统计</a></li>
